# softserve-hackaton-sre-agents

./: .dockerignore  .env.example  .gitignore  AGENTS_USE.md  CLAUDE.md  HACKATHON_BRIEF.md  LICENSE  Makefile  QUICKGUIDE.md  README.md  SCALING.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/scripts/: linear_smoke.py  wait-for-it.sh
backend/src/app/: __init__.py  config.py  main.py
backend/src/app/actions/: __init__.py  base.py  registry.py
backend/src/app/actions/handlers/: __init__.py  github_automation.py  issue_handlers.py  notify_reporter.py
backend/src/app/agents/: base.py  branch_creator_agent.py  claude_agent.py  dedup_agent.py  github_issue_commenter_agent.py  guardrail_agent.py  image_analyzer_agent.py  qa_handoff_agent.py  registry.py  ticket_orchestrator.py  triage_drafter_agent.py
backend/src/app/agents/prompts/: __init__.py  dedup.md  guardrail.md  image_analyzer.md  ticket_orchestrator.md  triage_drafter.md
backend/src/app/api/: agents.py  github.py  health.py  tickets.py  webhooks.py
backend/src/app/core/: db.py  event_dispatcher.py  logging.py  observability.py
backend/src/app/db/: __init__.py  base.py
backend/src/app/db/crud/: __init__.py  agent_invocation.py  base.py  prompt_injection_log.py
backend/src/app/db/models/: __init__.py  agent_invocation.py  prompt_injection_log.py
backend/src/app/domain/: __init__.py  events.py
backend/src/app/integrations/: __init__.py
backend/src/app/integrations/github/: __init__.py  client.py  schemas.py
backend/src/app/integrations/linear/: __init__.py  parser.py  schemas.py
backend/src/app/integrations/resend/: __init__.py  client.py
backend/src/app/services/: email_service.py
backend/src/app/tickets/: __init__.py  guardrails.py  linear_client.py  models.py  repository.py
backend/tests/: conftest.py  test_agents.py  test_dedup_agent.py  test_github_automation.py  test_github_client.py  test_github_setup.py  test_health.py  test_linear_webhook.py  test_notify_reporter.py  test_ticket_orchestrator.py
docs/: ARCHITECTURE.md  GETTING_STARTED.md  database.md  presentation.html
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  index.html  package.json  tsconfig.json  (+1 more)
(+21 files in other folders)
